--- a/testing/php7-spx/APKBUILD
+++ b/testing/php7-spx/APKBUILD
@@ -1,34 +1,31 @@
 # Maintainer: Andy Postnikov <apostnikov@gmail.com>
 pkgname=php7-spx
 _pkgreal=php-spx
-pkgver=0.4.4
+pkgver=0.4.6
 pkgrel=0
 pkgdesc="A simple & straight-to-the-point PHP profiling extension with its built-in web UI"
 url="https://github.com/NoiseByNorthwest/php-spx"
 arch="x86_64"
-license="GPL-3.0"
+license="GPL-3.0-or-later"
 depends="php7-common"
 makedepends="php7-dev autoconf re2c zlib-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/NoiseByNorthwest/php-spx/archive/v$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 build() {
-        cd "$builddir"
-        phpize7
-        ./configure --prefix=/usr --with-php-config=php-config7
-        make
+	phpize7
+	./configure --prefix=/usr --with-php-config=php-config7
+	make
 }
 
 check() {
-	cd "$builddir"
 	make NO_INTERACTION=1 REPORT_EXIT_STATUS=1 test
 }
 
 package() {
-        cd "$builddir"
-        make INSTALL_ROOT="$pkgdir" install
-        install -d "$pkgdir"/etc/php7/conf.d
-        echo "extension=spx.so" > "$pkgdir"/etc/php7/conf.d/$_pkgreal.ini
+	make INSTALL_ROOT="$pkgdir" install
+	install -d "$pkgdir"/etc/php7/conf.d
+	echo "extension=spx.so" > "$pkgdir"/etc/php7/conf.d/$_pkgreal.ini
 }
 
-sha512sums="d6061b5d64ee8959ba327445a03fc592a78be8dcdf350dcc7f5cbcafa09507f530cce0a342832108daedc050496a3c2fd5b39e8fe8caa4dd35e9273783073837  php7-spx-0.4.4.tar.gz"
+sha512sums="80de774760238d6aa4e7709fce31f0e97ed5dde62fceab5914d59e47038431f8a5d1c39aeb68d99ab83b0bd9f091ccdbc2563d13c0f659198dc5d1d8479eb8a4  php7-spx-0.4.6.tar.gz"
