--- a/testing/wob/APKBUILD
+++ b/testing/wob/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Galen Abell <galen@galenabell.com>
 # Maintainer: Galen Abell <galen@galenabell.com>
 pkgname=wob
-pkgver=0.5
+pkgver=0.6
 pkgrel=0
 pkgdesc="A lightweight overlay volume/backlight/progress/anything bar for Wayland."
 url="https://github.com/francma/wob"
@@ -9,8 +9,7 @@ arch="all"
 license="ISC"
 makedepends="meson git wayland-protocols wayland-dev scdoc"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/francma/wob/archive/$pkgver.tar.gz
-	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/francma/wob/archive/$pkgver.tar.gz"
 
 build() {
 	meson \
@@ -30,4 +29,4 @@ check() {
 package() {
 	DESTDIR="$pkgdir" ninja -C build-release install
 }
-sha512sums="9635af718e182ad62382e6560dbe037c2b991c6a817b579f6e73b874baa5b52932cc12c31df43fb042204c60e13e4c1b19ff1b1ffa9967947cee259ca6f3ceca  wob-0.5.tar.gz"
+sha512sums="3bcfb926a6785fabddb6b8bedfc508633039b95b8fe39e8664ef9be49e2189d495b0373c1ed364a418e29b982761ffd6f3f73c778003c7895318175bf9d5fcc3  wob-0.6.tar.gz"
