testing/gyp: Switch to python3

--- a/testing/gyp/APKBUILD
+++ b/testing/gyp/APKBUILD
@@ -3,22 +3,22 @@
 pkgname=gyp
 pkgver=20190716
 _commit=fcd686f1880fa52a1ee78d3e98af1b88cb334528
-pkgrel=0
+pkgrel=1
 pkgdesc="Generate Your Projects Meta-Build system"
 options="!check" # Tests currently fail
 url="https://gyp.gsrc.io"
 arch="noarch"
 license="BSD-3-Clause"
-depends="py-setuptools ninja"
+depends="py3-setuptools ninja"
 source="https://github.com/chromium/gyp/archive/$_commit.tar.gz"
 builddir="$srcdir/$pkgname-$_commit"
 
 build() {
-	python2 setup.py build
+	python3 setup.py build
 }
 
 package() {
-	python2 setup.py install --root="$pkgdir"
+	python3 setup.py install --root="$pkgdir"
 }
 
 cleanup_srcdir() {
