community/libgusb: upgrade to 0.3.2

--- a/community/libgusb/APKBUILD
+++ b/community/libgusb/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libgusb
-pkgver=0.3.1
+pkgver=0.3.2
 pkgrel=0
 pkgdesc="GLib wrapper around libusb"
 url="https://github.com/hughsie/libgusb"
@@ -12,7 +12,7 @@ options="!check"
 makedepends="glib-dev libusb-dev gtk-doc vala eudev-dev gobject-introspection-dev meson"
 checkdepends="python3-dev"
 subpackages="$pkgname-dev $pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/hughsie/$pkgname/archive/$pkgver.tar.gz"
+source="libgusb-$pkgver.tar.gz::https://github.com/hughsie/libgusb/archive/$pkgver.tar.gz"
 
 prepare() {
 	default_prepare
@@ -32,4 +32,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="2115bff8858146966dff1defa88cea3922a73a5f99cb3fdc9c720c4a831bad333d086390d3cd2cce5db21c30db0eee58ac161147d7eabc5fafcc5c5a28a66aa1  libgusb-0.3.1.tar.gz"
+sha512sums="c469e6012092369b325e42a9a61a2c87f2203ae27851752c2960a39dbef7a7e8a52ac0ca9a39b2e448feba38d23a77503f499fa072617922d075b4adb855ae00  libgusb-0.3.2.tar.gz"
