testing/php7-pecl-xlswriter: add reader feature

--- a/testing/php7-pecl-xlswriter/APKBUILD
+++ b/testing/php7-pecl-xlswriter/APKBUILD
@@ -3,19 +3,20 @@
 pkgname="php7-pecl-xlswriter"
 _pkgreal=xlswriter
 pkgver="1.3.3.2"
-pkgrel=0
+pkgrel=1
 pkgdesc="A PHP Extension for creating and reader XLSX files. "
 url="https://pecl.php.net/package/xlswriter"
 arch="all !s390x" # Test failure
 license="BSD-2-Clause"
 depends="php7-common"
-makedepends="php7-dev zlib-dev"
+makedepends="php7-dev zlib-dev re2c"
 source="$pkgname-$pkgver.tar.gz::https://pecl.php.net/get/$_pkgreal-$pkgver.tgz"
 builddir="$srcdir"/$_pkgreal-$pkgver
 
 build() {
 	phpize7
 	./configure \
+		--enable-reader \
 		--prefix=/usr \
 		--with-php-config=/usr/bin/php-config7
 	make
