community/girara: upgrade to 0.3.4

--- a/community/girara/APKBUILD
+++ b/community/girara/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Jean-Louis Fuchs <ganwell@fangorn.ch>
 # Maintainer: Jean-Louis Fuchs <ganwell@fangorn.ch>
 pkgname=girara
-pkgver=0.3.3
+pkgver=0.3.4
 pkgrel=0
 pkgdesc="girara - gtk user interface that focuses on simplicity and minimalism"
 url="https://git.pwmt.org/pwmt/girara"
@@ -13,26 +13,22 @@ checkdepends="dbus"
 makedepends="gtk+3.0-dev libnotify-dev json-c-dev intltool doxygen check-dev
 	xvfb ncurses meson ninja"
 subpackages="$pkgname-doc $pkgname-dev $pkgname-lang"
-source="https://git.pwmt.org/pwmt/$pkgname/-/archive/$pkgver/$pkgname-$pkgver.tar.gz
+source="https://git.pwmt.org/pwmt/girara/-/archive/$pkgver/girara-$pkgver.tar.gz
 	test.sh"
 
-builddir="$srcdir"/$pkgname-$pkgver
 
 build() {
-	cd "$builddir"
 	meson build --prefix=/usr
 	ninja -C build
 }
 
-check () {
+check() {
 	if [ "$CARCH" != "ppc64le" ]; then
-		cd "$builddir"
 		"$srcdir/test.sh"
 	fi
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
@@ -44,5 +40,5 @@ doc() {
 }
 
 
-sha512sums="2764f339c4b5744330c60fa5c8c902a06952d6c5a38589d236fe290f9934b9128527658d8aa99d42806255403b90f55ea1a85e5bd09da4b3a8f7c48be4d94f51  girara-0.3.3.tar.gz
+sha512sums="1eca68f4f28505d897c2f7cfb8804e67591e8327feb347c66da216d8f764cb0c88028d1c4c162579a882df7db1883b834c97d8488296ea5c0a8f709dfcea1f1a  girara-0.3.4.tar.gz
 2190d324753810c8dc5b109274dcf4f644e51edcda876c225ac76369dd569dda0b8db445b01dac1ac2b06178534d18e1074ca37d1a69622bdc58fd77350b4ddd  test.sh"
