--- a/community/lua-turbo/APKBUILD
+++ b/community/lua-turbo/APKBUILD
@@ -4,13 +4,13 @@
 pkgname=lua-turbo
 _jitver=2.1.0_beta3
 pkgver=2.1.3
-pkgrel=1
+pkgrel=2
 pkgdesc="a framework built for LuaJIT 2 and Linux"
 url="https://github.com/kernelsauce/turbo"
 # luajit is not available for disabled arches
 arch="all !s390x"
 license="Apache-2.0"
-depends="luajit lua5.1-cjson"
+depends="luajit lua5.1-cjson ca-certificates"
 subpackages="$pkgname-openrc"
 # https://github.com/kernelsauce/turbo/issues/343 (libressl-dev)
 makedepends="libressl-dev" 
