community/muacme: fix depends on cmd:openssl
It doesn't work...

ERROR: unsatisfiable constraints:
  cmd:openssl (virtual):
    provided by: openssl
    required by: muacme-0.2.0-r0[cmd:openssl]

--- a/community/muacme/APKBUILD
+++ b/community/muacme/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname="muacme"
 pkgver="0.2.0"
-pkgrel=0
+pkgrel=1
 pkgdesc="A convenient wrapper for the ACMEv2 client uacme"
 url="https://github.com/jirutka/muacme"
 arch="noarch"
 license="MIT"
-depends="uacme cmd:openssl"
+depends="uacme openssl"
 options="!check"  # no tests provided
 source="https://github.com/jirutka/muacme/archive/v$pkgver/$pkgname-$pkgver.tar.gz
 	muacme-renew-all.crond
