community/py3-bcrypt: fix bld by adding py3-wheel dependency

--- a/main/py3-bcrypt/APKBUILD
+++ b/main/py3-bcrypt/APKBUILD
@@ -8,7 +8,7 @@ pkgdesc="Modern password hashing for your software and your servers"
 url="https://github.com/pyca/bcrypt"
 arch="all"
 license="Apache-2.0"
-makedepends="python3-dev py3-setuptools libffi-dev"
+makedepends="python3-dev py3-setuptools py3-wheel libffi-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/pyca/$_pkgname/archive/$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
