testing/simgear: disable on x86
openscenegraph is not available on x86.

--- a/testing/simgear/APKBUILD
+++ b/testing/simgear/APKBUILD
@@ -5,7 +5,7 @@ pkgrel=0
 pkgdesc="Sim library for FlightGear"
 options="!check" # Accepts boost only up to 1.71.0
 url="https://github.com/FlightGear/simgear"
-arch="x86 x86_64" # openscenegraph availability
+arch="x86_64" # openscenegraph availability
 license="GPL"
 makedepends="$depends_dev boost-dev cmake curl-dev mesa-dev openal-soft-dev
 	openscenegraph-dev zlib-dev expat-dev"
