testing/gradio: disable on armhf
depends on missing gst-plugins-good

--- a/testing/gradio/APKBUILD
+++ b/testing/gradio/APKBUILD
@@ -5,7 +5,7 @@ pkgver=7.3
 pkgrel=1
 pkgdesc="A GTK3 app for finding and listening to internet radio stations"
 url="https://github.com/haecker-felix/Gradio"
-arch="all"
+arch="all !armhf" # gst-plugins-good missing, which depends on qt5-declarative
 license="GPL-3.0-or-later"
 depends="gst-plugins-good"
 makedepends="meson vala gtk+3.0-dev libsoup-dev json-glib-dev gstreamer-dev gst-plugins-base-dev"
