--- a/testing/kio-gdrive/APKBUILD
+++ b/testing/kio-gdrive/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kio-gdrive
 pkgver=1.2.7
 pkgrel=0
-arch="all !ppc64le !s390x" # Blocked by libkgapi -> qt5-qtwebengine
+arch="all !ppc64le !s390x !armhf" # Blocked by libkgapi -> qt5-qtwebengine
 url="https://community.kde.org/KIO_GDrive"
 pkgdesc="KIO Slave to access Google Drive"
 license="GPL-2.0-or-later"
