--- a/testing/gammaray/APKBUILD
+++ b/testing/gammaray/APKBUILD
@@ -5,7 +5,7 @@ pkgver=2.11.0
 pkgrel=0
 pkgdesc="A tool for examining the internals of a Qt application and to some extent also manipulate it"
 url="https://www.kdab.com/development-resources/qt-tools/gammaray/"
-arch="all !ppc64le !s390x" # Limited by qt5-qtwebengine
+arch="all !ppc64le !s390x !armhf" # Limited by qt5-qtwebengine
 license="GPL-2.0-or-later"
 makedepends="cmake qt5-qtbase-dev qt5-qtwebengine-dev qt5-qtlocation-dev
 	qt5-qtwayland-dev qt5-qttools-dev qt5-qtsvg-dev qt5-qtdeclarative-dev
