--- a/testing/qownnotes/APKBUILD
+++ b/testing/qownnotes/APKBUILD
@@ -40,7 +40,7 @@ package() {
 
 lang() {
 	install -d "$subpkgdir/usr/share/QOwnNotes/languages/"
-	install -D -m644 "$builddir/languages/*.qm" "$subpkgdir/usr/share/QOwnNotes/languages/"
+	install -D -m644 "$builddir"/languages/*.qm "$subpkgdir/usr/share/QOwnNotes/languages/"
 }
 
 sha512sums="c540ca18204968cef07d5150366c28c910ac03ba0311342e8741d8ff75c70187842a66321b083f0ccc5f68a40884a1a2b0d23241ae5103da4b4823a472ff1e68  qownnotes-20.1.1.tar.xz"
