--- a/testing/flightgear/APKBUILD
+++ b/testing/flightgear/APKBUILD
@@ -5,7 +5,7 @@ pkgver=2019.1.1
 pkgrel=0
 pkgdesc="Sophisticated flight simulator"
 url="http://flightgear.org"
-arch="x86 x86_64" # openscenegraph availability
+arch="x86_64" # openscenegraph availability
 license="GPL"
 makedepends="$depends_dev boost-dev cmake curl-dev dbus-dev eudev-dev
 	freeglut-dev glew-dev libx11-dev libxi-dev libxmu-dev mesa-dev
