--- a/testing/podman/APKBUILD
+++ b/testing/podman/APKBUILD
@@ -1,14 +1,15 @@
-# Contributor:
-# Maintainer:
+# Contributor: Michał Polański <michal@polanski.me>
+# Maintainer: Michał Polański <michal@polanski.me>
 pkgname=podman
 pkgver=1.6.4
-pkgrel=0
-pkgdesc="Library and tool for running OCI-based containers in Pods"
+pkgrel=1
+pkgdesc="Simple management tool for pods, containers, and images"
+url="https://podman.io/"
 options="!check" # TODO: enable tests
-url="https://github.com/containers/libpod"
 arch="all"
 license="Apache-2.0"
 makedepends="go gpgme-dev libseccomp-dev libassuan-dev go-md2man btrfs-progs-dev"
+subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/containers/libpod/archive/v$pkgver.tar.gz"
 builddir="$srcdir/libpod-$pkgver"
 
@@ -19,7 +20,7 @@ build() {
 
 package() {
 	unset LDFLAGS
-	make install.bin PREFIX=/usr DESTDIR="$pkgdir"
+	make install.bin install.man PREFIX=/usr DESTDIR="$pkgdir"
 }
 
 sha512sums="69322551ab196cd3859e03988178c59a47df6f00ef0768a56e40d785f6b2130df03ff0ea76d101e21e748ea9260ede144d31f3ec21922ffd70eb2969a77d4194  podman-1.6.4.tar.gz"
