--- a/community/uboot-tools/APKBUILD
+++ b/community/uboot-tools/APKBUILD
@@ -12,6 +12,7 @@ subpackages="$pkgname-examples"
 options="!check" # No test suite
 source="http://ftp.denx.de/pub/u-boot/u-boot-$pkgver.tar.bz2
 	fix-ulong-typedef.patch
+	defang-efi-bootcmd.patch
 	"
 builddir="$srcdir/u-boot-$pkgver"
 
@@ -42,4 +43,5 @@ package() {
 }
 
 sha512sums="073d4e0234095c1bda1ffa7a648972aa4530d106ee1a73035e0501b1aba2951653582c8b7bcf338d4e95012fa67e75f97b7e1fbac5cc764d609b671ef29617f7  u-boot-2020.01.tar.bz2
-813dd152afa8863d3c7456449c9b0b358232edae7c8575ebe4af71bfe74019d4c27f30dc6fcf307018e36f5afdaf7de32253c0a773955d5be74c625ddd5668c7  fix-ulong-typedef.patch"
+813dd152afa8863d3c7456449c9b0b358232edae7c8575ebe4af71bfe74019d4c27f30dc6fcf307018e36f5afdaf7de32253c0a773955d5be74c625ddd5668c7  fix-ulong-typedef.patch
+ae4fa0a1e11fe862fc30d78d52616ede65b87893e656d7bca0c3e269d744ed477a23185f1d61e91e9beb765c5bafcbcba65699ca9835a516637098ef332644df  defang-efi-bootcmd.patch"
