--- a/testing/conmon/APKBUILD
+++ b/testing/conmon/APKBUILD
@@ -1,13 +1,13 @@
-# Contributor:
-# Maintainer:
+# Contributor: Michał Polański <michal@polanski.me>
+# Maintainer: Michał Polański <michal@polanski.me>
 pkgname=conmon
-pkgver=2.0.8
+pkgver=2.0.9
 pkgrel=0
 pkgdesc="An OCI container runtime monitor"
 url="https://github.com/containers/conmon"
 arch="all"
 license="Apache-2.0"
-makedepends="glib-dev"
+makedepends="glib-dev bash"
 source="$pkgname-$pkgver.tar.gz::https://github.com/containers/conmon/archive/v$pkgver.tar.gz"
 
 build() {
@@ -23,4 +23,4 @@ package() {
 }
 
 
-sha512sums="5601701b2c9dd8fa0e0cc9112f74c41b647b42e4f0ed3ddb7e6aa8ef2baf9a5fc872eac7cf1aa389071069104735afdd4acb75e53cc7a15c69aa33e825a7ddf6  conmon-2.0.8.tar.gz"
+sha512sums="904275d6e116c15e1c373c7ee5d7d9f2cdb671f86c364bab24eb688cd618afacfd63ca5076fd5a67869b97cdbb226df8fac15f390a384e125d9007c0052ed847  conmon-2.0.9.tar.gz"
