community/gitea: upgrade to 1.11.0

--- a/community/gitea/APKBUILD
+++ b/community/gitea/APKBUILD
@@ -2,17 +2,16 @@
 # Contributor: 6543 <6543@obermui.de>
 # Maintainer: Carlo Landmeter <clandmeter@gmail.com>
 pkgname=gitea
-pkgver=1.10.3
+pkgver=1.11.0
 pkgrel=0
 pkgdesc="A self-hosted Git service written in Go"
 url="https://gitea.io"
 arch="all"
 license="MIT"
 options="chmod-clean"
-[ "$CARCH" = x86 ] && options="!check" # git-lfs is currently not available
-depends="git"
-makedepends="go libcap"
-checkdepends="bash git-lfs gnupg openssh openssh-keygen sqlite"
+depends="git git-lfs gnupg"
+makedepends="go libcap nodejs npm"
+checkdepends="bash git git-lfs gnupg openssh openssh-keygen sqlite"
 install="$pkgname.pre-install"
 pkgusers="gitea"
 pkggroups="www-data"
@@ -24,7 +23,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/go-gitea/gitea/archive/v$pkg
 builddir="$srcdir/src/code.gitea.io/$pkgname"
 
 case "$CARCH" in
-armhf) options="!check" ;; # FIXME
+s390x|x86) options="!check" ;;
 esac
 
 prepare() {
@@ -42,17 +41,16 @@ build() {
 }
 
 check() {
-	## "make test" - modified (exclude broken tests) #https://github.com/go-gitea/gitea/issues/8089
+	## "make test" - modified (exclude broken tests)
 	## 'code.gitea.io/gitea/modules/migrations': github hase rate limits! 403 API
 	PACKAGES=$(go list ./... | grep -v /vendor/ | \
 		grep -v 'code.gitea.io/gitea/modules/migrations' | \
-		grep -v 'code.gitea.io/gitea/integrations' | \
-		grep -v '^code.gitea.io/gitea/models$' | \
-		grep -v 'code.gitea.io/gitea/modules/git' | \
 		grep -v 'code.gitea.io/gitea/modules/charset' | \
-		grep -v 'code.gitea.io/gitea/modules/repofiles')
-
+		grep -v 'code.gitea.io/gitea/integrations' | \
+		grep -v 'code.gitea.io/gitea/modules/git')
 	GO111MODULE=on go test -mod=vendor -tags='sqlite sqlite_unlock_notify' $PACKAGES
+
+	timeout -s ABRT 20m make test-sqlite
 }
 
 package() {
@@ -80,6 +78,6 @@ package() {
 		"$pkgdir"/etc/init.d/$pkgname
 }
 
-sha512sums="2e3962069f2160ea536a7ab4322261c5063fffe0d291796cba61c9d0a3cf965d339441bc0b2259883695a6ce4b62de1f3e16e3fc78016ce303847b70f4f8ff34  gitea-1.10.3.tar.gz
+sha512sums="75078b8f26995dfc843106abc68c7f8970b35423aa12969089b703a24fd490e1e5cc0c212de7986f8b3fac9ac476ac5938b6622228c90ad1e1eaa26b7a5480e6  gitea-1.11.0.tar.gz
 2497e6f2a18e3ceb65352cd220eab2c1c0893d0e731600462a60397de2b70d7c1de7db2af2769b25fe708b0822c811bb20dc797b59b9dd93efb376bea1c35796  gitea.initd
-27a202006d6e8d4146659f6356eaa99437f9f596dd369e9430d64b859bc6a1ad16091eef09232aa385fe1bf8ca94bbdf31b94975068220ad10338cded384f726  gitea.ini"
+0fd40db2ec9150b354448f1fa6c8cd2515911619935afb55f070a1a9f594badce2cd46b436b930464495f6561f97c999de2489710761e3f829832b8e4da5eb23  gitea.ini"
