--- a/community/acsccid/APKBUILD
+++ b/community/acsccid/APKBUILD
@@ -1,27 +1,24 @@
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=acsccid
-pkgver=1.1.7
+pkgver=1.1.8
 pkgrel=0
 pkgdesc="PCSC driver for ACS CCID smart card reader"
 url="https://github.com/acshk/acsccid"
 arch="all"
-license="LGPL"
+license="LGPL-2.1-or-later"
 depends="pcsc-lite"
 makedepends="pcsc-lite-dev libusb-dev perl flex"
 options="!check" # upstream does not provide tests
 subpackages="$pkgname-udev::noarch"
-source="https://downloads.sourceforge.net/acsccid/acsccid-${pkgver}.tar.bz2"
-builddir="$srcdir/"${pkgname}-${pkgver}
+source="https://downloads.sourceforge.net/acsccid/acsccid-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	./configure --prefix=/usr
 	make
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="${pkgdir}" install
+	make DESTDIR="$pkgdir" install
 }
 
 udev() {
@@ -32,4 +29,4 @@ udev() {
 	install -Dm644 src/92_pcscd_acsccid.rules "$subpkgdir/etc/udev/rules.d/92_pcscd_acsccid.rules"
 }
 
-sha512sums="22779b610d6aada3c5332ff7c54816389323f220aa53711b010ef03ebfd4f0021d67d151d3c517190eb721e44357cbdb2b0a67131c18de34367e8a1e6cff0cb3  acsccid-1.1.7.tar.bz2"
+sha512sums="1a9bbfcda071b19693df5cc3e75216778ba4abeffe421ec6a308af77f382229f0d980b5ae0c63022833018413ea9e69f5ae1e12fb720a2dc400ca081772f8bfb  acsccid-1.1.8.tar.bz2"
