main/curl: upgrade to 7.68.0

--- a/main/curl/APKBUILD
+++ b/main/curl/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=curl
-pkgver=7.67.0
+pkgver=7.68.0
 pkgrel=0
 pkgdesc="URL retrival utility and library"
 url="https://curl.haxx.se/"
@@ -14,7 +14,7 @@ depends_dev="openssl-dev nghttp2-dev zlib-dev"
 checkdepends="python3"
 makedepends="$depends_dev autoconf automake groff libtool perl"
 subpackages="$pkgname-dbg $pkgname-static $pkgname-doc $pkgname-dev libcurl"
-source="https://curl.haxx.se/download/$pkgname-$pkgver.tar.xz"
+source="https://curl.haxx.se/download/curl-$pkgver.tar.xz"
 
 # secfixes:
 #   7.66.0-r0:
@@ -107,12 +107,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make -C tests nonflaky-test
 }
 
 package() {
-	cd "$builddir"
 	make install DESTDIR="$pkgdir"
 }
 
@@ -130,4 +128,4 @@ static() {
 	mv "$pkgdir"/usr/lib/*.a "$subpkgdir"/usr/lib
 }
 
-sha512sums="1d5a344be92dd61b1ba5189eff0fe337e492f2e850794943570fe71c985d0af60bd412082be646e07aaa8639908593e1ce4bb2d07db35394ec377e8ce8b9ae29  curl-7.67.0.tar.xz"
+sha512sums="bf365609c9a66a05b3a263d02bcd3f81f905570c5739c8ec522a296b4b8e2a479d64d5524e8345e14eafad28995ee22d923522f1a45fa40eb46db38759c2eb2c  curl-7.68.0.tar.xz"
