--- a/main/lua-mosquitto/APKBUILD
+++ b/main/lua-mosquitto/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=lua-mosquitto
 pkgver=0.3
-pkgrel=0
-pkgdesc="Bindingd to libmosquitto for Lua"
+pkgrel=1
+pkgdesc="Bindings to libmosquitto for Lua"
 url="https://github.com/flukso/lua-mosquitto"
 arch="all"
 license="MIT"
