--- a/main/nss/APKBUILD
+++ b/main/nss/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=nss
-pkgver=3.48
+pkgver=3.49
 _ver=${pkgver//./_}
 pkgrel=0
 pkgdesc="Mozilla Network Security Services"
@@ -23,6 +23,8 @@ source="https://ftp.mozilla.org/pub/security/$pkgname/releases/NSS_${pkgver//./_
 builddir="$srcdir/$pkgname-$pkgver"
 
 # secfixes:
+#   3.49-r0:
+#     - CVE-2019-17023
 #   3.47.1-r0:
 #     - CVE-2019-11745
 #   3.41-r0:
@@ -159,7 +161,7 @@ tools() {
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
 
-sha512sums="71aefe323501dd8d750ed36606554f2e67ecb2bca85b55bc798d5dfc3a47f3d454348ca950971aaaafb16f6d847c098d2b1c40d40b50380e0c2540ed1b9a9e9a  nss-3.48.tar.gz
+sha512sums="7d8df73a2e585585a7cb3f887af3f933854984479531b3dd30316873bdd92c130e2fadb54e7b3b1f0b10675b1bce09112ef39860d74ef6f0df7b57bf430bd072  nss-3.49.tar.gz
 75dbd648a461940647ff373389cc73bc8ec609139cd46c91bcce866af02be6bcbb0524eb3dfb721fbd5b0bc68c20081ed6f7debf6b24317f2a7ba823e8d3c531  nss.pc.in
 0f2efa8563b11da68669d281b4459289a56f5a3a906eb60382126f3adcfe47420cdcedc6ab57727a3afeeffa2bbb4c750b43bef8b5f343a75c968411dfa30e09  nss-util.pc.in
 09c69d4cc39ec9deebc88696a80d0f15eb2d8c94d9daa234a2adfec941b63805eb4ce7f2e1943857b938bddcaee1beac246a0ec627b71563d9f846e6119a4a15  nss-softokn.pc.in
