--- a/testing/podman/APKBUILD
+++ b/testing/podman/APKBUILD
@@ -1,21 +1,21 @@
 # Contributor: Michał Polański <michal@polanski.me>
 # Maintainer: Michał Polański <michal@polanski.me>
 pkgname=podman
-pkgver=1.6.4
-pkgrel=1
+pkgver=1.7.0
+pkgrel=0
 pkgdesc="Simple management tool for pods, containers, and images"
 url="https://podman.io/"
 options="!check" # TODO: enable tests
 arch="all"
 license="Apache-2.0"
-makedepends="go gpgme-dev libseccomp-dev libassuan-dev go-md2man btrfs-progs-dev"
+makedepends="go gpgme-dev libseccomp-dev libassuan-dev go-md2man btrfs-progs-dev bash"
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/containers/libpod/archive/v$pkgver.tar.gz"
 builddir="$srcdir/libpod-$pkgver"
 
 build() {
 	unset LDFLAGS
-	make PREFIX=/usr
+	make podman PREFIX=/usr
 }
 
 package() {
@@ -23,4 +23,4 @@ package() {
 	make install.bin install.man PREFIX=/usr DESTDIR="$pkgdir"
 }
 
-sha512sums="69322551ab196cd3859e03988178c59a47df6f00ef0768a56e40d785f6b2130df03ff0ea76d101e21e748ea9260ede144d31f3ec21922ffd70eb2969a77d4194  podman-1.6.4.tar.gz"
+sha512sums="986ec7123127d3ffb26cecc39a2ae3d8a6dd3d147327449fc4e9d17f6e6606bde278f13920d0aef59410262801251e7b4cfe099cb5caafe9773533e8476848fe  podman-1.7.0.tar.gz"
