testing/prometheus-snmp-exporter: fix lint warnings

--- a/testing/prometheus-snmp-exporter/APKBUILD
+++ b/testing/prometheus-snmp-exporter/APKBUILD
@@ -7,9 +7,8 @@ pkgdesc="Description"
 url="https://github.com/prometheus/snmp_exporter"
 arch="all"
 license="Apache-2.0"
-depends=""
 makedepends="go net-snmp-dev"
-install="$pkgname.pre-install $pkgname.post-install"
+install="$pkgname.pre-install"
 subpackages="$pkgname-openrc"
 source="
     $pkgname-$pkgver.tar.gz::https://github.com/prometheus/snmp_exporter/archive/v$pkgver.tar.gz
