--- a/testing/py3-smmap2/APKBUILD
+++ b/testing/py3-smmap2/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-smmap2
 pkgver=2.0.5
 pkgrel=1
