testing/zola: orphan

--- a/testing/zola/APKBUILD
+++ b/testing/zola/APKBUILD
@@ -1,4 +1,5 @@
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Contributor: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=zola
 pkgver=0.9.0
 pkgrel=0
