testing/hyperfine: orphan

--- a/testing/hyperfine/APKBUILD
+++ b/testing/hyperfine/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=hyperfine
 pkgver=1.9.0
 pkgrel=0
