--- a/testing/py3-shellingham/APKBUILD
+++ b/testing/py3-shellingham/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-shellingham
 _realname=shellingham
 pkgver=1.3.1
