testing/py3-invoke: orphan

--- a/testing/py3-invoke/APKBUILD
+++ b/testing/py3-invoke/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-invoke
 _pkgname=invoke
 pkgver=1.4.0
