--- a/testing/py3-visitor/APKBUILD
+++ b/testing/py3-visitor/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-visitor
 pkgver=0.1.3
 pkgrel=1
