testing/py3-twine: orphan

--- a/testing/py3-twine/APKBUILD
+++ b/testing/py3-twine/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-twine
 _pkgname=twine
 pkgver=3.1.1
