testing/py3-readme_renderer: orphan

--- a/testing/py3-readme_renderer/APKBUILD
+++ b/testing/py3-readme_renderer/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-readme_renderer
 _pkgname=readme_renderer
 pkgver=24.0
