--- a/testing/py3-rstr/APKBUILD
+++ b/testing/py3-rstr/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-rstr
 pkgver=2.2.6
 pkgrel=0
