testing/py3-pastel: orphan

--- a/testing/py3-pastel/APKBUILD
+++ b/testing/py3-pastel/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-pastel
 _realname=pastel
 pkgver=0.2.0
