--- a/testing/py3-tomlkit/APKBUILD
+++ b/testing/py3-tomlkit/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-tomlkit
 _realname=tomlkit
 pkgver=0.5.8
