--- a/testing/py3-pylev/APKBUILD
+++ b/testing/py3-pylev/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-pylev
 _realname=pylev
 pkgver=1.3.0
