--- a/testing/py3-pkgconfig/APKBUILD
+++ b/testing/py3-pkgconfig/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-pkgconfig
 _realname=pkgconfig
 pkgver=1.5.1
