--- a/testing/py3-pyaes/APKBUILD
+++ b/testing/py3-pyaes/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-pyaes
 pkgver=1.6.1
 pkgrel=1
