--- a/testing/py3-path/APKBUILD
+++ b/testing/py3-path/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-path
 pkgver=13.1.0
 pkgrel=0
