--- a/testing/py3-cleo/APKBUILD
+++ b/testing/py3-cleo/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-cleo
 _realname=cleo
 pkgver=0.7.6
