--- a/unmaintained/gajim-plugin-omemo/APKBUILD
+++ b/unmaintained/gajim-plugin-omemo/APKBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Marian Buschsieweke <marian.buschsieweke@ovgu.de>
+# Maintainer:
 pkgname=gajim-plugin-omemo
 _pkgname="${pkgname#gajim-plugin-}"
 pkgver=2.6.59
@@ -9,7 +9,7 @@ arch="noarch"
 license="GPL-3.0-only"
 depends="gajim py3-qrcode py3-axolotl"
 makedepends="py-setuptools python3-dev"
-source="$pkgname-$pkgver.zip::https://ftp.gajim.org/plugins_releases/${_pkgname}_${pkgver}.zip"
+source="$pkgname-$pkgver.zip::https://ftp.gajim.org/plugins_releases/${_pkgname}_$pkgver.zip"
 builddir="$srcdir"/$_pkgname
 options="!check"
 
@@ -18,7 +18,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	rm -f CHANGELOG COPYING
 	site_pkgs="$(python3 -c 'import site; print(site.getsitepackages()[0])')"
 	mkdir -p "$pkgdir/$site_pkgs/gajim/data/plugins/$_pkgname"
