--- a/testing/py3-gitlab/APKBUILD
+++ b/testing/py3-gitlab/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-gitlab
 _pkgname=python-gitlab
 pkgver=1.15.0
