--- a/testing/py3-dominate/APKBUILD
+++ b/testing/py3-dominate/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-dominate
 pkgver=2.4.0
 pkgrel=1
