testing/py3-cachecontrol: orphan

--- a/testing/py3-cachecontrol/APKBUILD
+++ b/testing/py3-cachecontrol/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-cachecontrol
 _realname=CacheControl
 pkgver=0.12.6
