--- a/testing/py3-cachy/APKBUILD
+++ b/testing/py3-cachy/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-cachy
 _realname=cachy
 pkgver=0.3.0
