--- a/testing/py3-coreapi/APKBUILD
+++ b/testing/py3-coreapi/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-coreapi
 _pkgname=python-client
 pkgver=2.3.3
