--- a/testing/py3-clikit/APKBUILD
+++ b/testing/py3-clikit/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-clikit
 _realname=clikit
 pkgver=0.4.1
