--- a/testing/py3-gitpython/APKBUILD
+++ b/testing/py3-gitpython/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-gitpython
 pkgver=3.0.5
 pkgrel=0
