--- a/testing/py3-libevdev/APKBUILD
+++ b/testing/py3-libevdev/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-libevdev
 _pkgname=python-libevdev
 pkgver=0.8
