--- a/testing/py3-pbkdf2/APKBUILD
+++ b/testing/py3-pbkdf2/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-pbkdf2
 _pkgname=python-pbkdf2
 pkgver=1.3
@@ -10,7 +10,7 @@ arch="noarch"
 license="MIT"
 depends="python3"
 makedepends="py3-setuptools"
-source="$pkgname-$pkgver.tar.gz::https://github.com/dlitz/${_pkgname}/archive/v${pkgver}.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/dlitz/$_pkgname/archive/v$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
 build() {
