--- a/testing/editline/APKBUILD
+++ b/testing/editline/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=editline
 pkgver=1.17.0
 pkgrel=0
