--- a/testing/py3-openapi-codec/APKBUILD
+++ b/testing/py3-openapi-codec/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leonardo Arena <rnalrd@alpinelinux.org>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-openapi-codec
 _pkgname=python-openapi-codec
 pkgver=1.3.2
