--- a/testing/py3-pysimplesoap/APKBUILD
+++ b/testing/py3-pysimplesoap/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-pysimplesoap
 _pkgname=PySimpleSOAP
 pkgver=1.16.2
