--- a/testing/libb2/APKBUILD
+++ b/testing/libb2/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=libb2
 pkgver=0.98.1
 pkgrel=0
