--- a/testing/libbloom/APKBUILD
+++ b/testing/libbloom/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=libbloom
 pkgver=1.6
 pkgrel=1
