--- a/testing/libbaseencode/APKBUILD
+++ b/testing/libbaseencode/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=libbaseencode
 pkgver=1.0.9
 pkgrel=0
@@ -10,7 +10,7 @@ arch="all"
 license="Apache-2.0"
 makedepends="cmake"
 subpackages="$pkgname-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/paolostivanin/libbaseencode/archive/v${pkgver}.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/paolostivanin/libbaseencode/archive/v$pkgver.tar.gz"
 
 build() {
 	cmake \
