--- a/testing/libcork/APKBUILD
+++ b/testing/libcork/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=libcork
 pkgver=0.15.0
 pkgrel=0
