testing/libcorkipset: orphan

--- a/testing/libcorkipset/APKBUILD
+++ b/testing/libcorkipset/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=libcorkipset
 pkgver=1.1.1
 _debver=20150311-8
