--- a/testing/gtk-layer-shell/APKBUILD
+++ b/testing/gtk-layer-shell/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=gtk-layer-shell
 pkgver=0.1.0
 pkgrel=1
