--- a/testing/gyp/APKBUILD
+++ b/testing/gyp/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=gyp
 pkgver=20190716
 _commit=fcd686f1880fa52a1ee78d3e98af1b88cb334528
