--- a/testing/lab/APKBUILD
+++ b/testing/lab/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Carlo Landmeter <clandmeter@alpinelinux.org>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=lab
 pkgver=0.17.2
 pkgrel=0
