--- a/testing/poetry/APKBUILD
+++ b/testing/poetry/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=poetry
 pkgver=1.0.0
 pkgrel=0
