--- a/testing/paprefs/APKBUILD
+++ b/testing/paprefs/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=paprefs
 pkgver=1.1
 pkgrel=1
