testing/buku: orphan

--- a/testing/buku/APKBUILD
+++ b/testing/buku/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=buku
 pkgver=4.2.2
 pkgrel=0
@@ -14,7 +14,7 @@ makedepends="py3-setuptools"
 subpackages="$pkgname-doc $pkgname-bash-completion:_bashcomp:noarch
 	$pkgname-zsh-completion:_zshcomp:noarch
 	$pkgname-fish-completion:_fishcomp:noarch"
-source="$pkgname-$pkgver.tar.gz::https://github.com/jarun/Buku/archive/v${pkgver}.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/jarun/Buku/archive/v$pkgver.tar.gz"
 builddir="$srcdir"/Buku-$pkgver
 
 package() {
