testing/py3-django-rest-swagger: orphan

--- a/testing/py3-django-rest-swagger/APKBUILD
+++ b/testing/py3-django-rest-swagger/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leonardo Arena <rnalrd@alpinelinux.org>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-django-rest-swagger
 _pkgname=django-rest-swagger
 pkgver=2.2.0
