--- a/testing/mdcat/APKBUILD
+++ b/testing/mdcat/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=mdcat
 pkgver=0.14.0
 pkgrel=0
