--- a/community/kdecoration/APKBUILD
+++ b/community/kdecoration/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kdecoration
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Plugin based library to create window decorations"
-arch="all"
+arch="all !armhf"
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="LGPL-2.1-only OR LGPL-3.0-only"
 depends_dev="qt5-qtbase-dev ki18n-dev"
