community/kgamma5: disable on armhf

--- a/community/kgamma5/APKBUILD
+++ b/community/kgamma5/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kgamma5
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Adjust your monitor's gamma settings"
-arch="all"
+arch="all !armhf"
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later"
 makedepends="qt5-qtbase-dev kconfig-dev kconfigwidgets-dev kdoctools-dev ki18n-dev extra-cmake-modules"
