--- a/community/kscreenlocker/APKBUILD
+++ b/community/kscreenlocker/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kscreenlocker
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Library and components for secure lock screen architecture"
-arch="all"
+arch="all !armhf"
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later AND (GPL-2.0-only OR GPL-3.0-only)"
 depends="linux-pam elogind"
