--- a/community/libksysguard/APKBUILD
+++ b/community/libksysguard/APKBUILD
@@ -4,7 +4,7 @@ pkgname=libksysguard
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="KDE system monitor library"
-arch="all"
+arch="all !armhf"
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="LGPL-2.1-or-later AND (GPL-2.0-only OR GPL-3.0-only)"
 depends_dev="qt5-qtwebchannel-dev kcoreaddons-dev kconfig-dev ki18n-dev kwindowsystem-dev kcompletion-dev kauth-dev kwidgetsaddons-dev kiconthemes-dev kconfigwidgets-dev kservice-dev kglobalaccel-dev kio-dev plasma-framework-dev zlib-dev"
