main/lua-ossl: upgrade to 20190731

--- a/main/lua-ossl/APKBUILD
+++ b/main/lua-ossl/APKBUILD
@@ -2,16 +2,16 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=lua-ossl
 _pkgname=luaossl
-pkgver=20180708
+pkgver=20190731
 _ver=${pkgver%_git*}
-pkgrel=2
+pkgrel=0
 pkgdesc="A comprehensive OpenSSL Lua module"
 url="http://25thandclement.com/~william/projects/luaossl.html"
 arch="all"
 license="MIT"
-depends=""
 makedepends="openssl-dev"
 subpackages=""
+checkdepends=""
 source="$_pkgname-$_ver.tar.gz::https://github.com/wahern/$_pkgname/archive/rel-$pkgver.tar.gz
 	0001-pkey-getPrivateKey-method.patch
 	0002-pkey.getPrivateKey-encryption.patch
@@ -25,6 +25,7 @@ _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
 	makedepends="$makedepends lua$_v-dev"
 	subpackages="$subpackages lua$_v-${pkgname#lua-}:_package"
+	checkdepends="$checkdepends lua$_v-cqueues"
 done
 
 build() {
@@ -37,6 +38,9 @@ build() {
 }
 
 check() {
+	# requires ffi
+	rm "$builddir"/regress/104-interposition-discarded.lua
+
 	local lver; for lver in $_luaversions; do
 		msg "Checking on lua$lver..."
 
@@ -72,7 +76,7 @@ _package() {
 	echo 'rock_manifest = {}' > "$rockdir"/rock_manifest
 }
 
-sha512sums="b2a73a7e7ace9a01c8c5a26603107f7741de88de32c393ed9134b70d55278c81d48e357955e671654825de282449b9570ecdc6a4fbcf4890439c0200ba471338  luaossl-20180708.tar.gz
+sha512sums="09315deb0c40b59230d80262906cb9f067660242315544179ec5df57a028b088c56a4bb0b944e5975bccf86d521901eae36006c5623ec1159cfca94d05fb6890  luaossl-20190731.tar.gz
 385ca444d860deaf22b460cba0510daf40014c5da90bafb5e0299ee173625e4ab4083dab17fcd973f816a46b3cb1d2d3d535633128462ba33f5ab9c14c2baa77  0001-pkey-getPrivateKey-method.patch
 0e33d10cb40f0b4d614591a3fda3e8ddc35438a9ddd8170239e8680b831ecbfea108ff111504686fbfc8a82bc59b96bbeb166ddef2ee6e299707fb5795b4b3ce  0002-pkey.getPrivateKey-encryption.patch
 c5800c658773477c967a73eb1a86d9f746a6a0821ee462e8873ac5149c0b77ef3b54ee651ea7bf5d93c42e67b8e60b449e6697c1167aa92bf73e6d65aa645205  0003-pkey.new-decryption.patch
