testing/ldc: Update to 1.20.0

--- a/testing/ldc/APKBUILD
+++ b/testing/ldc/APKBUILD
@@ -1,11 +1,11 @@
 # Contributor: Mathias LANG <pro.mathias.lang@gmail.com>
 # Maintainer: Mathias LANG <pro.mathias.lang@gmail.com>
 pkgname=ldc
-pkgver=1.19.0
-pkgrel=1
+pkgver=1.20.0
+pkgrel=0
 pkgdesc="The LLVM-based D Compiler"
 url="https://github.com/ldc-developers/ldc"
-# Currently limited to x86_64 because of issues with GDC
+# LDC does not support host compiling on most of the architecture Alpine supports
 arch="x86_64"
 license="BSD-3-Clause AND BSL-1.0 AND ( Artistic-1.0 OR GPL-2.0-or-later ) AND NCSA AND MIT"
 depends="libexecinfo tzdata"
@@ -15,8 +15,8 @@ checkdepends="bash gdb grep llvm9-test-utils"
 # a dynamically-linked D program.
 subpackages="$pkgname-runtime $pkgname-static"
 source="https://github.com/ldc-developers/ldc/releases/download/v$pkgver/ldc-$pkgver-src.tar.gz
-		01-stdio-fseek.patch
-		02-conf.patch"
+		01-conf.patch
+		"
 builddir="$srcdir/ldc-$pkgver-src/"
 
 build() {
@@ -92,6 +92,5 @@ static() {
 	mv "$pkgdir"/usr/lib/*.a "$subpkgdir/usr/lib/"
 }
 
-sha512sums="ffd1b085c7c8fe76162051234cc73e92f08a391cebac3f405c9dc6d03fcbf459d5e99295066ab4b0bd931bdce84dce53e23c33c1bc8ad35327f1b283f8e8f10a  ldc-1.19.0-src.tar.gz
-20d6bb560867052edeed6005e15473dae25c62002c7bd47f0e37610ffd5e94a50b49244c2a9b814f4858babca403f120ae6028cd86f964dd4734736eda068536  01-stdio-fseek.patch
-eb86e4be0ecf72aaabbd5608c8056bb9cede035895e766330b6d14f14c06dc513fcecc1b6e56ab6fc9fc26c220a689cc8b1394a30a319189c414f1e067c1d983  02-conf.patch"
+sha512sums="6a94400a9f28bc5fe0d12d5ab5aa188eb84d929c61ee79f3d87e9719f4e72cc1b658c4290d30e038ee6f741ca55f81007965102b0c591d75234aa4ea57d6f21f  ldc-1.20.0-src.tar.gz
+eb86e4be0ecf72aaabbd5608c8056bb9cede035895e766330b6d14f14c06dc513fcecc1b6e56ab6fc9fc26c220a689cc8b1394a30a319189c414f1e067c1d983  01-conf.patch"
