community/tracker: increase stack-size to avoid crashes
https://gitlab.gnome.org/GNOME/tracker-miners/issues/91

--- a/community/tracker/APKBUILD
+++ b/community/tracker/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=tracker
 pkgver=2.3.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Personal search tool and storage system"
 url="https://wiki.gnome.org/Projects/Tracker"
 arch="all"
@@ -32,6 +32,9 @@ subpackages="
 source="https://download.gnome.org/sources/tracker/${pkgver%.*}/tracker-$pkgver.tar.xz"
 
 build() {
+	# https://gitlab.gnome.org/GNOME/tracker-miners/issues/91
+	export LDFLAGS="$LDFLAGS -Wl,-z,stack-size=2097152"
+
 	meson \
 		--prefix=/usr \
 		--sysconfdir=/etc \
