--- a/community/tracker-miners/APKBUILD
+++ b/community/tracker-miners/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=tracker-miners
 pkgver=2.3.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Data miners for tracker"
 url="https://developer.gnome.org/libtracker-miner/stable"
 arch="all !s390x" # networkmanager not avail due to iwd
 license="GPL-2.0-or-later"
 depends="tracker"
 makedepends="meson glib-dev intltool tracker-dev ffmpeg-dev dbus-dev exempi-dev
-	flac-dev gexiv2-dev gstreamer-dev enca-dev libcue-dev libexif-dev
+	flac-dev gexiv2-dev gstreamer-dev enca-dev libexif-dev
 	libgsf-dev libgxps-dev libiptcdata-dev libjpeg-turbo-dev libosinfo-dev
 	libpng-dev libseccomp-dev tiff-dev libxml2-dev libvorbis-dev poppler-dev
 	taglib-dev totem-pl-parser-dev upower-dev zlib-dev gst-plugins-base-dev
