--- a/testing/dxvk/APKBUILD
+++ b/testing/dxvk/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=dxvk
-pkgver=1.5
+pkgver=1.5.1
 pkgrel=0
 pkgdesc="Vulkan-based compatibility layer for Direct3D 10/11"
 options="!strip !check"
@@ -49,4 +49,4 @@ package() {
 	ln -s /usr/share/dxvk/setup_dxvk.sh "$pkgdir"/usr/bin/setup_dxvk
 	chmod +x "$pkgdir"/usr/share/dxvk/setup_dxvk.sh
 }
-sha512sums="11171fc880c3bbc63aed080bc81c5d9bad3c7100704ed8f8887b916803c85fb4063c82656777d84e48ea0fb90f51aaa57bfd5b2d412d55affa2feae0e9d26a11  dxvk-1.5.tar.gz"
+sha512sums="a7c4947fca56d81185971c47a804c5d9863d71dce84a5252800ff5d592c86aeb2114ac163f2dc2c2ee6cc08857504c8dbf75a26df1224c2a19c6f7874e19107a  dxvk-1.5.1.tar.gz"
