--- a/testing/py3-praw/APKBUILD
+++ b/testing/py3-praw/APKBUILD
@@ -2,15 +2,16 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=py3-praw
 _pkgname=praw
-pkgver=6.4.0
-pkgrel=1
+pkgver=6.5.0
+pkgrel=0
 pkgdesc="A Python module to access to reddit's API"
+options="!check" # missing 'Betamax' modules
 url="https://github.com/praw-dev/praw"
 arch="noarch"
 license="GPL-3.0-or-later"
 depends="py3-prawcore py3-update-checker py3-requests py3-six py3-websocket-client"
 makedepends="py3-setuptools"
-checkdepends="pytest"
+checkdepends="py3-pytest"
 source="$_pkgname-$pkgver.tar.gz::https://github.com/praw-dev/praw/archive/v$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
@@ -22,11 +23,11 @@ build() {
 }
 
 check() {
-	python3 setup.py test
+	pytest-3
 }
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="ca444e068cb61c16388aac2adca6874aafa588fb0aecfc94666a88405f4d9123ace6361cfeb1f3ceaab19bdc04eb9f3ffc03a8260cef80e3b6113f906e9e33f1  praw-6.4.0.tar.gz"
+sha512sums="7249c9b51ae765be4f97c8dac3bf7ef00117a661e79d84a3d657fe0c5d3939d813d98119729b9ab5984fa89140a80deceacb399e30d49cc4a32a0f72e1bfecf8  praw-6.5.0.tar.gz"
