--- a/main/libvirt/APKBUILD
+++ b/main/libvirt/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=libvirt
 pkgver=5.10.0
 _ver="${pkgver/_rc/-rc}"
-pkgrel=0
+pkgrel=1
 pkgdesc="A virtualization API for several hypervisor and container systems"
 url="https://libvirt.org/"
 arch="all"
@@ -74,7 +74,9 @@ build() {
 		--with-storage-fs \
 		--with-storage-lvm \
 		--enable-static \
-		--with-qemu
+		--with-qemu \
+		--with-qemu-group=kvm \
+		--with-qemu-user=qemu
 	make
 }
 
